--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   web:
     build: .
@@ -7,6 +9,8 @@ services:
     env_file:
       - .env
     volumes:
-      - ./amber.db:/app/amber.db
+      - amber-data:/app/amber.db
     restart: unless-stopped
 
+volumes:
+  amber-data:
